--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node_modules/react-native/packager/packager.sh"
+    "start": "node node_modules/react-native/local-cli/cli.js start"
   },
   "dependencies": {
-    "react-native": "^0.5.0",
-    "tcomb-form-native": "^0.1.7"
+    "react": "^0.14.8",
+    "react-native": "^0.24.1",
+    "tcomb-form-native": "^0.4.2"
   }
 }
