overhaul using latest RN

--- a/package.json
+++ b/package.json
@@ -1,13 +1,23 @@
 {
-  "name": "ToDoApp",
-  "version": "0.0.1",
-  "private": true,
-  "scripts": {
-    "start": "node node_modules/react-native/local-cli/cli.js start"
-  },
-  "dependencies": {
-    "react": "^0.14.8",
-    "react-native": "^0.24.1",
-    "tcomb-form-native": "^0.4.2"
-  }
+	"name": "ToDoApp",
+	"version": "0.0.1",
+	"private": true,
+	"scripts": {
+		"start": "node node_modules/react-native/local-cli/cli.js start",
+		"test": "jest"
+	},
+	"dependencies": {
+		"react": "16.0.0-beta.5",
+		"react-native": "0.49.3",
+		"tcomb-form-native": "^0.6.11"
+	},
+	"devDependencies": {
+		"babel-jest": "21.2.0",
+		"babel-preset-react-native": "4.0.0",
+		"jest": "21.2.1",
+		"react-test-renderer": "16.0.0-beta.5"
+	},
+	"jest": {
+		"preset": "react-native"
+	}
 }
